examples/kubernetes/controller/05-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unifi
  name: controller
  labels:
    app: controller

spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller

  template:
    metadata:
      labels:
        app: controller
    spec:

      affinity:
        nodeAffinity:
          # Run on the master node
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - "true"

      containers:
        - name: controller
          image: stellirin/unifi-controller:stable
          imagePullPolicy: Always
          ports:
            - name: discoverable
              hostPort: 1900
              containerPort: 1900
              protocol: UDP
            - name: stun
              hostPort: 3478
              containerPort: 3478
              protocol: UDP
            - name: speed-test
              hostPort: 6789
              containerPort: 6789
              protocol: TCP
            - name: communication
              hostPort: 8080
              containerPort: 8080
              protocol: TCP
            - name: controller
              hostPort: 8443
              containerPort: 8443
              protocol: TCP
            - name: http-redirect
              hostPort: 8880
              containerPort: 8880
              protocol: TCP
            - name: https-redirect
              hostPort: 8843
              containerPort: 8843
              protocol: TCP
            - name: discovery
              hostPort: 10001
              containerPort: 10001
              protocol: UDP
          volumeMounts:
            # MongoDB credentials
            - name: credentials
              mountPath: /run/secrets/mongodb
            # Advanced controller configuration
            - name: config
              mountPath: /var/lib/unifi/sites/default/config.gateway.json
              subPath: CONFIG_GATEWAY_JSON
            # UniFi Controller storage volume
            - name: data
              mountPath: /var/lib/unifi
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 320Mi

      volumes:
        # MongoDB credentials
        - name: credentials
          secret:
            secretName: unifi-mongodb-user-secret
            defaultMode: 0444
            items:
              - key:  MONGO_DB_USER
                path: MONGO_DB_USER
              - key:  MONGO_DB_PASS
                path: MONGO_DB_PASS

        # MongoDB credentials
        - name: config
          configMap:
            name: unifi-controller-configmap
            defaultMode: 0444
            items:
              - key:  CONFIG_GATEWAY_JSON
                path: CONFIG_GATEWAY_JSON

        # MongoDB storage volume
        - name: data
          persistentVolumeClaim:
            claimName: controller-pvc
