examples/kubernetes/controller/03-Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: unifi
  name: controller
  labels:
    app: controller

spec:
  type: ClusterIP
  selector:
    app: controller
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: controller
